# file-monitor

./: .gitignore  CMakeLists.txt  README.md  file-monitor.pro  format-xml-ui.py  quickstart  resources.qrc
deployment/: create_source_package.sh  deployment.pri
deployment/unix/: file-monitor.desktop
deployment/unix/debian/: changelog  control  copyright  create_deb.sh  rules
deployment/windows/: create_installer.sh  file-monitor-icon.rc  installer.nsi
documentation/: changelog  file-monitor.1  readme
icons/: file-monitor.xpm
source/: aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  contextmenus.cpp  contextmenus.hpp  customgraphicsview.cpp  customgraphicsview.hpp  customtextedit.cpp  customtextedit.hpp  customwebview.cpp  customwebview.hpp  filesystemwatcher.cpp  filesystemwatcher.hpp  finddialog.cpp  finddialog.hpp  finddialog.ui  htmlview.cpp  htmlview.hpp  imageview.cpp  imageview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  refactor.txt  settings.txt  source.pri  svgview.cpp  svgview.hpp  tabpage.cpp  tabpage.hpp  tabwidget.cpp  tabwidget.hpp  textview.cpp  textview.hpp  utility.cpp  utility.hpp  view.cpp  view.hpp  zoom.cpp  (+2 more)
translations/: hi-IN.ts  maintainers  translations.pri
